p2/app_folder/app1/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  replicas: 1
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one 
          image: nginx:1.23.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-one-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one-volume
          configMap:
            name: app-one-configmap
