p2/app_folder/app1/app1_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: app-one
