p2/app_folder/app1/app1_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-ingress
spec:
  rules:
  - host: app1.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-one
              port:
                number: 80
